Repair git index, stage, and sync all project files

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dunes Basketball - Player Directory</title>
+    <title>ryze Basketball - Player Directory</title>
     <link rel="stylesheet" href="styles.css?v=20251209v2">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">🏀 Dunes Basketball</div>
+            <div class="logo">🏀 ryze Basketball</div>
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search players...">
                 <button id="searchBtn">Search</button>
@@ -27,11 +27,11 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-video">
-            <iframe src="https://www.youtube.com/embed/eFGNXvJwIP8?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&rel=0&playlist=eFGNXvJwIP8&playsinline=1" title="Dunes Basketball Highlight" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/eFGNXvJwIP8?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&rel=0&playlist=eFGNXvJwIP8&playsinline=1" title="ryze Basketball Highlight" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="hero-inner">
             <div class="hero-copy">
-                <div class="hero-eyebrow">Dunes Basketball</div>
+                <div class="hero-eyebrow">ryze Basketball</div>
                 <h1>Discover elite players and watch the latest highlights</h1>
                 <p>Browse the directory, explore featured talent, and dive into game-changing plays from around the world.</p>
                 <div class="hero-actions">
@@ -146,7 +146,7 @@
     <footer class="footer" id="about">
         <div class="footer-content">
             <div class="footer-section">
-                <h4>About Dunes Basketball</h4>
+                <h4>About ryze Basketball</h4>
                 <p>Your premier source for basketball player information and statistics from around the world.</p>
             </div>
             <div class="footer-section">
@@ -159,12 +159,12 @@
             </div>
             <div class="footer-section">
                 <h4>Contact</h4>
-                <p>Email: info@dunesbasketball.com</p>
+                <p>Email: info@ryzebasketball.com</p>
                 <p>Phone: (555) 123-4567</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Dunes Basketball. All rights reserved.</p>
+            <p>&copy; 2025 ryze Basketball. All rights reserved.</p>
         </div>
     </footer>
 
